--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,16 +16,8 @@ permissions:
 
 on:
   push:
-    tags:
-      - v*
     branches:
       - master
-      - stable
-      - v1
-  release:
-    types:
-      - published
-      - released
   pull_request:
     types:
       - opened
@@ -42,60 +34,24 @@ jobs:
     strategy:
       matrix:
         go_version:
-          - 1.22
+          - 1.23
+          - 1.24
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
         with:
+          persist-credentials: false
           submodules: recursive
 
       - name: Setup Go
-        uses: actions/setup-go@v5
-        with:
-          go-version: ${{ matrix.go_version }}
-
-      - name: Run tests
-        run: go test -coverprofile=./coverage.txt -covermode=atomic -v ./...
-
-      - name: Collect coverage
-        uses: codecov/codecov-action@v4
-        with:
-          file: ./coverage.txt
-
-  fuzz:
-    name: Fuzzing
-    runs-on: ubuntu-latest
-    timeout-minutes: 20
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          submodules: recursive
-
-      - name: Setup Go
-        uses: actions/setup-go@v5
-        with:
-          go-version: ${{ matrix.go_version }}
-
-      - name: Run fuzzing
-        run: make -j4 fuzz
-
-  lint:
-    name: Lint
-    runs-on: ubuntu-latest
-    timeout-minutes: 5
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          submodules: recursive
-
-      - name: Setup Go
-        uses: actions/setup-go@v5
+        uses: actions/setup-go@d35c59abb061a4a6fb18e82ac0862c26744d6ab5 # v5
         with:
           go-version: ${{ matrix.go_version }}
 
       - name: Run linter
-        uses: golangci/golangci-lint-action@v6
-        with:
-          version: v1.58
+        uses: golangci/golangci-lint-action@4afd733a84b1f43292c63897423277bb7f4313a9 # v8
+
+      - name: Run tests
+        run: go test -v ./...
+
+      - name: Run fuzzing
+        run: make -j4 fuzz
