Add postUpdateOptions to renovate configuration

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -11,4 +11,8 @@
     "security:openssf-scorecard",
     "group:allNonMajor",
   ],
+  "postUpdateOptions": [
+    "gomodMassage",
+    // "gomodUpdateImportPaths",  // implicate "gomodTidy"
+  ],
 }
