cleanhouse: simplify the config with the best-practices preset
- set minimumReleaseAge for all updates
- unify the configuration into the JSONC file located in the root dir

--- a/renovate.json
+++ b/renovate.json
@@ -1,3 +1,28 @@
 {
-  "forkProcessing": "enabled"
+  "forkProcessing": "enabled",
+
+  "extends": [
+    "config:best-practices",
+    "group:allNonMajor",
+    "group:githubArtifactActions",
+    "group:linters",
+    "schedule:earlyMondays",
+    "security:openssf-scorecard"
+  ],
+  "ignorePresets": ["docker:pinDigests"],
+  "packageRules": [
+    {
+      // MUST have a matching criteria
+      "matchPackageNames": ["*"],
+
+      // followed by the actions. Both the matching and actions are mandatory.
+      "minimumReleaseAge": "3 days",
+      "internalChecksFilter": "strict"
+    }
+  ],
+  "postUpdateOptions": [
+    // "gomodUpdateImportPaths",  // implicate "gomodTidy"
+    "gomodMassage"
+  ],
+  "timezone": "Asia/Shanghai"
 }
